Fix h1 layout shift on Index page

--- a/dev-dist/assets/index-Dzz93986.css
+++ b/dev-dist/assets/index-Dzz93986.css
@@ -908,6 +908,9 @@ h6{
 .block{
   display: block;
 }
+.inline-block{
+  display: inline-block;
+}
 .flex{
   display: flex;
 }
@@ -1155,11 +1158,11 @@ h6{
 .max-w-\[--skeleton-width\]{
   max-width: var(--skeleton-width);
 }
+.max-w-\[1100px\]{
+  max-width: 1100px;
+}
 .max-w-\[700px\]{
   max-width: 700px;
-}
-.max-w-\[900px\]{
-  max-width: 900px;
 }
 .max-w-lg{
   max-width: 32rem;
@@ -3107,6 +3110,9 @@ h6{
   }
   .sm\:inline-flex{
     display: inline-flex;
+  }
+  .sm\:min-h-\[141px\]{
+    min-height: 141px;
   }
   .sm\:w-auto{
     width: auto;
